cmake_minimum_required(VERSION 3.27)
project(cpp_studies)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        cpp_studies
#        sum.cpp
#        variables.cpp
#        sizeof.cpp
#        week.cpp
#        miles_array.cpp
#        find_factors.cpp
#        two_d_array.cpp
#        class_order.cpp
#        writing_pass_array.cpp
#        multidimensional_array.cpp
#        string_class_from_std.cpp
#        copy_constructor.cpp
#        order_l3.cpp
#        adress_in_memory.cpp
#        stored_pointers.cpp
#        linked_list.cpp
        forward_list.cpp
        order_killer.cpp
)
